Datepicker [FIX] Fixes overflow and datepicker-popup

--- a/scss/core/elements/_input.datepicker.scss
+++ b/scss/core/elements/_input.datepicker.scss
@@ -9,7 +9,6 @@
 		luid-daterange-picker {
 			display: inline-block;
 			vertical-align: middle;
-			overflow: hidden;
 
 			// Label support
 			& + label {
@@ -348,7 +347,8 @@
 
 		// Datepicker modes
 		// ====
-		luid-date-picker {
+		luid-date-picker,
+		luid-date-picker-popup {
 			.months,
 			.years {
 				position: absolute;
